# cppbackend

sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: constants.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.h  main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: constants.h  main.cpp
sprint2/problems/command_line/src/: main.cpp
sprint2/problems/command_line/src/app/: application.cpp  application.h  player_tokens.cpp  player_tokens.h
sprint2/problems/command_line/src/model/: dog.h  game.cpp  game_session.cpp  game_session.h  model.h
sprint2/problems/command_line/src/program_options/: program_options.cpp
sprint2/problems/command_line/src/request_handler/: request_handler.h
sprint2/problems/command_line/src/time/: ticker.h
sprint2/problems/final_task/solution/: CMakeLists.txt
sprint2/problems/final_task/solution/src/: constants.h  streamadapter.h
sprint2/problems/game_state/solution/src/: constants.h  files.h  logger.cpp  model.h  players.h  request_handler.h
sprint2/problems/join_game/solution/src/: constants.h  logger.h  main.cpp  model.h  players.cpp  players.h  request_handler.h
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/data/: config.json
sprint2/problems/move_players/solution/src/: json_loader.cpp  model.h  players.h  players.h.AcTPdi  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: constants.h  files.cpp  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: http_server.h  main.cpp  request_handler.h  streamadapter.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: constants.h  http_server.h  json_loader.cpp  main.cpp  model.h  players.h  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/app/: application.cpp  application.h  player_tokens.cpp  player_tokens.h  players.cpp  players.h
sprint2/problems/time_control/solution/src/http_server/: http_server.h
sprint2/problems/time_control/solution/src/json_loader/: json_loader.cpp  json_loader.h
sprint2/problems/time_control/solution/src/model/: dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  model.cpp  model.h
sprint2/problems/time_control/solution/src/request_handler/: request_handler.cpp  request_handler.h
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/final_task/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/instrumentation/solution/: gmon.out  report
sprint3/problems/load/solution/: ammo.txt  load.yaml
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: main.cpp
sprint3/problems/static_lib/solution/src/app/: players.h
sprint3/problems/static_lib/solution/src/model/: dog.cpp  game.cpp  game.h  game_session.cpp  game_session.h  loot_generator.cpp  maps.cpp
sprint3/problems/static_lib/solution/src/request_handler/: api_request_handler.h  logging_request_handler.h
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  save_state.txt
(+164 files in other folders)
